# static_mock

./: Cargo.toml
src/: handler.rs  main.rs
