[package]
name = "static_mock"
version = "0.1.0"
authors = ["Knair <knairwang@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"

flexi_logger = "0.16"
log = "0.4"

anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
